mid: 0000515 msg: Permetre canviar any en el número d'expedient que es genera
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@842 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -153,6 +153,7 @@ expedient.iniciar.iniciar_expedient=Iniciar expedient
 expedient.llistat.expedients=Expedients
 expedient.llistat.expedient=Expedient
 expedient.iniciar.confirm_esborrar=Estau segur que voleu esborrar aquest expedient?
+expedient.iniciar.canvi_any=Any per a generar el número d'expedient
 expedient.registre=Registre de l'expedient
 expedient.registre.accio=Acció
 expedient.registre.entitat=Entitat
@@ -234,6 +235,7 @@ expedient.tipus.form.expressio=Expressió per calcular el número
 expedient.tipus.form.seq_actual=Seqüència actual
 expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
 expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
+expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedient
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
@@ -256,7 +258,7 @@ expedient.massiva.proces.principal=Procés principal
 expedient.massiva.subprocessos=Subprocessos
 expedient.massiva.aturar=Aturar tramitaci&#243; d'expedients
 expedient.massiva.reassignar.buit=L'expedient no té cap tasca que coincideixi amb la tasca a reassignat
-expedient.massiva.reassignar.no.open=L''expedient disposa de {0} tasques que coincideixen amb la rasca a reassignar, però només n''hi havia {1} de actives que s''han pogut reassignar 
+expedient.massiva.reassignar.no.open=L&#39;expedient disposa de {0} tasques que coincideixen amb la rasca a reassignar, però només n&#39;hi havia {1} de actives que s&#39;han pogut reassignar 
 expedient.massiva.tasca=Executar tasca
 expedient.massiva.tasca.guardar=Guardar.
 expedient.massiva.tasca.validar=Validar.
@@ -374,7 +376,7 @@ info.enum.valors.importats=Els valors s'han importat correctament
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
-info.accio.executat.nprimers=L'acció s'ha executat correctament en els primers {0} expedients
+info.accio.executat.nprimers=L&#39;acció s&#39;ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
 info.accio.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
@@ -382,7 +384,7 @@ info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
 info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
-info.reindexar.executat.nprimers=La reindexació s'ha executat correctament en els primers {0} expedients
+info.reindexar.executat.nprimers=La reindexació s&#39;ha executat correctament en els primers {0} expedients
 info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
 info.tasca.massiu.completar=S&#39;ha programat la finalització de {0} tasca(ques)
 info.tasca.massiu.guardar=S&#39;ha programat el guardat de {0} tasca(ques)
@@ -427,9 +429,9 @@ info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
 info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctament en els primers {0} expedients
 info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(s)
 
-info.expedient.iniciat=L'expedient s'ha iniciat correctament
+info.expedient.iniciat=L&#39;expedient s&#39;ha iniciat correctament: {0}
 
-info.tasca.reassignada=La tasca {0} s'ha reassignat correctament
+info.tasca.reassignada=La tasca {0} s&#39;ha reassignat correctament
 
 info.termini.iniciat=El termini s'ha iniciat correctament
 info.termini.aturat=El termini s'ha aturat correctament
@@ -438,7 +440,7 @@ info.termini.cancelat=El termini s'ha cancelat correctament
 info.termini.modificat=El termini s'ha modificat correctament
 
 info.tipus.exp.esborrat=El tipus d'expedient s'ha esborrat correctament
-info.defproc.marcat.inicial=La definició de procés '{0}' s'ha marcat com a inicial
+info.defproc.marcat.inicial=La definició de procés '{0}' s&#39;ha marcat com a inicial
 
 info.estat.creat=L'estat s'ha creat correctament
 info.estat.guardat=L'estat s'ha guardat correctament
@@ -1236,7 +1238,7 @@ tasca.gllistat.m_baixa=Molt baixa
 tasca.gllistat.data_limit=Data límit&nbsp;
 tasca.gllistat.agafar=Agafar
 tasca.gllistat.agafar.massiu=Agafar seleccionats
-tasca.gllistat.agafar.OK=S''han agafat {0} tasques
+tasca.gllistat.agafar.OK=S&#39;han agafat {0} tasques
 tasca.gllistat.agafar.KO=Error al agafar les tasques:
 
 tasca.info.confirmacio=Estau segur que voleu delegar aquesta tasca?
