MID: 448 MSG: Execució accions massives: Afegits logs en cas d'error
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@849 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -378,7 +378,8 @@ info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
 info.accio.executat.nprimers=L&#39;acció s&#39;ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
-info.accio.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
+info.accio.massiu.executat=S&#39;ha programat la execució d'accions a {0} expedient(s)
+info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
