--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -272,7 +272,7 @@ expedient.massiva.tasca.reg.borrar=Borrar registre
 expedient.massiva.tasca.reg.guardar=Guardar registre
 expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
 
-execucions.massives.no=No s'ha programat cap acció massiva
+execucions.massives.no=No s''ha programat cap acció massiva
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
@@ -378,7 +378,7 @@ info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
 info.accio.executat.nprimers=L&#39;acció s&#39;ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
-info.accio.massiu.executat=S&#39;ha programat la execució d'accions a {0} expedient(s)
+info.accio.massiu.executat=S&#39;ha programat la execució d''accions a {0} expedient(s)
 info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.expedient.desanulat = L'expedient s'ha activat correctament
