mid: 0000522 msg: Alliberar tasques
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@851 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -432,7 +432,8 @@ info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(
 
 info.expedient.iniciat=L&#39;expedient s&#39;ha iniciat correctament: {0}
 
-info.tasca.reassignada=La tasca {0} s&#39;ha reassignat correctament
+info.tasca.reassignada=La tasca s&#39;ha reassignat correctament
+info.tasca.alliberada=La tasca s&#39;ha retornat als seus responsables originals
 
 info.termini.iniciat=El termini s'ha iniciat correctament
 info.termini.aturat=El termini s'ha aturat correctament
@@ -1278,6 +1279,7 @@ tasca.pllistat.m_baixa=Molt baixa
 tasca.pllistat.data_limit=Data límit&nbsp;
 tasca.pllistat.tasca_min=tasca
 tasca.pllistat.massiva=Tramitació massiva
+tasca.pllistat.alliberar=Alliberar
 
 tasca.massiva.tramitacio=Tramitació massiva de tasques
 tasca.massiva.tramitar=Tramitar
