mid: 0000523 msg: Mostrar identificació de l'expedient al tramitar la tasca
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@853 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1212,6 +1212,9 @@ tasca.doc.guardar=Guardar
 tasca.doc.doc_marcats=Els documents marcats amb
 tasca.doc.generar.auto.confirm=El document generat s'adjuntarà automàticament a l'expedient. Voleu continuar?
 tasca.doc.zip=Descarregar documents comprimits en ZIP
+tasca.doc.adjunt.arxiu=Arxiu
+tasca.doc.adjunt.adjuntat.el=Adjuntat el
+tasca.doc.adjunt.data.document=Data del document
 
 tasca.form.confirmacio=Estau segur que voleu donar per bones les dades d'aquesta tasca?
 tasca.form.confirmacioValidacio=Estau segur que voleu donar per bones les dades d'aquesta tasca i finalitzar-la?
