mid: 0000528 msg: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@860 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -4,12 +4,16 @@ expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
 expedient.consulta.datainici=Data d&#39;inici
+expedient.consulta.datahorainici=Data i hora d&#39;inici
 expedient.consulta.i=i
 expedient.consulta.tipusexpedient=Tipus d&#39;expedient
 expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
 expedient.consulta.select.estat=Seleccioni un estat
 expedient.consulta.select.consula=Seleccioni una consulta
 expedient.consulta.select.variable=Seleccioni una variable
+expedient.consulta.select.document=Seleccioni un document
+expedient.consulta.select.def_proces=Seleccioni una definició de procés
+expedient.consulta.select.tasca=Seleccioni una tasca
 expedient.consulta.estat=Estat
 expedient.consulta.entre=Entre
 expedient.consulta.consultar=Consultar
@@ -53,6 +57,7 @@ expedient.document.adjunt=Document adjunt
 expedient.document.document=Document
 expedient.document.documents_proces=Documents del procés
 expedient.document.adjuntar_document_proces=Adjuntar document al procés
+expedient.document.adjuntar_document_massiu=Adjuntar document als expedients
 expedient.document.confirm_esborrar_proces=Estau segur que voleu esborrar aquest document del procés?
 expedient.document.confirm_esborrar_tasca=Estau segur que voleu esborrar aquest document de la tasca?
 expedient.document.confirm_modificar_documents=Es podran modificar documents ja introduïts. Voleu continuar?
@@ -80,8 +85,12 @@ expedient.termini.aturat.el=Aturat el
 expedient.termini.data.de.fi=Data de fi del termini
 expedient.termini.estat=Estat
 expedient.termini.estat.actiu=Actiu
+expedient.termini.estat.error=Error
+expedient.termini.estat.process=En procés
+expedient.termini.estat.finalizat=Finalizat
 expedient.termini.estat.cancelat=Cancel·lat
 expedient.termini.estat.pendent=Pendent d'iniciar
+expedient.termini.estat.pendent_solament=Pendent
 expedient.termini.estat.aturat=Aturat
 expedient.termini.accio.iniciar=Iniciar
 expedient.termini.accio.aturar=Aturar
@@ -98,6 +107,7 @@ expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aques
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'expedient?
 expedient.eines.confirm_reindexar_expedients=Estau segur que voleu reindexar el(s) expedient(s)?
+expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
 expedient.eines.aturar_tramitacio=Aturar la tramitació de l'expedient
@@ -106,10 +116,14 @@ expedient.eines.motiu=Motiu
 expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
+expedient.eines.reassignar.expedients=Reassignar tasques
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.eines.modificar_variables=Variables
+expedient.eines.reassignar.expedients=Reassignar tasca
+expedient.eines.reassignar.tipus=Tipus d''expressió
+expedient.eines.reassignar_tasques=Tasca
 expedient.info.informacio=Informació de l'expedient
 expedient.info.confirm.accio.executar=Estau segur que voleu executar aquesta acció?
 expedient.info.confirm.relacio.esborrar=Estau segur que voleu esborrar aquesta relació?
@@ -139,6 +153,7 @@ expedient.iniciar.iniciar_expedient=Iniciar expedient
 expedient.llistat.expedients=Expedients
 expedient.llistat.expedient=Expedient
 expedient.iniciar.confirm_esborrar=Estau segur que voleu esborrar aquest expedient?
+expedient.iniciar.canvi_any=Any per a generar el número d'expedient
 expedient.registre=Registre de l'expedient
 expedient.registre.accio=Acció
 expedient.registre.entitat=Entitat
@@ -220,20 +235,44 @@ expedient.tipus.form.expressio=Expressió per calcular el número
 expedient.tipus.form.seq_actual=Seqüència actual
 expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
 expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
+expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedient
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
-expedient.massiva.canvi=Canviar selecció
-expedient.massiva.actualitzar=Canviar versió del procés principal
-expedient.massiva.accions=Executar acció
-expedient.massiva.executarScriptMas=Executar scripts
+expedient.massiva.canvi=Canviar selecci&#243;
+expedient.massiva.actualitzar=Canviar versi&#243; del proc&#233;s
+expedient.massiva.accions=Executar acci&#243;
+expedient.massiva.executarScriptMas=Executar script
 expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
 expedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
 expedient.massiva.confirm_exec_accio=Estau segur que voleu executar l'acció en aquests expedients?
+expedient.massiva.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquests expedients?
 expedient.massiva.tots=Tots
 expedient.massiva.exec_accio=Executar acció
-expedient.massiva.modificar_variables=Modificar variables
-expedient.massiva.documents=Modificar documents
+expedient.massiva.modificar_variables=Modificar variable
+expedient.massiva.documents=Modificar document
+expedient.massiva.documents.adjuntar=Adjuntar document
+expedient.massiva.correu=Enviar correu al finalitzar l'execució
+expedient.massiva.proces=Procés massiu
+expedient.massiva.proces.principal=Procés principal
+expedient.massiva.subprocessos=Subprocessos
+expedient.massiva.aturar=Aturar tramitaci&#243; d'expedients
+expedient.massiva.reassignar.buit=L'expedient no té cap tasca que coincideixi amb la tasca a reassignat
+expedient.massiva.reassignar.no.open=L&#39;expedient disposa de {0} tasques que coincideixen amb la rasca a reassignar, però només n&#39;hi havia {1} de actives que s&#39;han pogut reassignar 
+expedient.massiva.tasca=Executar tasca
+expedient.massiva.tasca.guardar=Guardar.
+expedient.massiva.tasca.validar=Validar.
+expedient.massiva.tasca.completar=completar.
+expedient.massiva.tasca.restaurar=Restaurar.
+expedient.massiva.tasca.accio=Executar acci&#243;
+expedient.massiva.tasca.doc.guardar=Guardar document
+expedient.massiva.tasca.doc.borrar=Esborrar document
+expedient.massiva.tasca.doc.generar=Generar document
+expedient.massiva.tasca.reg.borrar=Borrar registre
+expedient.massiva.tasca.reg.guardar=Guardar registre
+expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
+
+execucions.massives.no=No s''ha programat cap acció massiva
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
@@ -337,18 +376,34 @@ info.enum.valors.importats=Els valors s'han importat correctament
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
-info.accio.executat.nprimers=L'acció s'ha executat correctament en els primers {0} expedients
+info.accio.executat.nprimers=L&#39;acció s&#39;ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
+info.accio.massiu.executat=S&#39;ha programat la execució d''accions a {0} expedient(s)
+info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
+info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
-info.expedient.reindexat=L'expedient s'ha reindexat correctament
-info.reindexar.executat=La reindexació s'ha realitzat correctament
-info.reindexar.executat.nprimers=La reindexació s'ha executat correctament en els primers {0} expedients
+info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
+info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
+info.reindexar.executat.nprimers=La reindexació s&#39;ha executat correctament en els primers {0} expedients
+info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
+info.tasca.massiu.completar=S&#39;ha programat la finalització de {0} tasca(ques)
+info.tasca.massiu.guardar=S&#39;ha programat el guardat de {0} tasca(ques)
+info.tasca.massiu.validar=S&#39;ha programat la validació de {0} tasca(ques)
+info.tasca.massiu.restaurar=S&#39;ha programat la restauració de {0} tasca(ques)
+info.tasca.massiu.accio=S&#39;ha programat la execució de {0} acció(ons)
+info.tasca.massiu.document.generar=S&#39;ha programat la generació del document a {0} tasca(ques)
+info.tasca.massiu.document.guardar=S&#39;ha programat el guardat del document a {0} tasca(ques)
+info.tasca.massiu.document.esborrar=S&#39;ha programat la eliminació del document a {0} tasca(ques)
+info.tasca.massiu.registre.esborrar=S&#39;ha programat la eliminació d&#39;un registre a {0} tasca(ques)
+info.tasca.massiu.registre.guardar=S&#39;ha programat el guardat d&#39;un registre a {0} tasca(ques)
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
 info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
 
 info.dada.modificat=La dada s'ha modificat correctament
+info.dada.massiu.modificat=S&#39;ha programat la modificació de la variable {0} a {1} expedient(s)
+info.dada.massiu.error=S&#39;ha produit un error al programar la modificació de la variable {0}
 
 info.document.adjuntat=El document s'ha adjuntat correctament
 info.document.adjuntats=Els documents s'han adjuntat correctament
@@ -357,21 +412,28 @@ info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
 info.document.guardat=El document s'ha guardat correctament
+info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
 info.document.guardats=Els documents s'ha guardat correctament
+info.document.massiu.generar=S&#39;ha programat la generació del document a {0} expedient(s)
+info.document.massiu.esborrar=S&#39;ha programat la eliminació del document a {0} expedient(s)
 
 info.informacio.modificat=La informació s'ha modificat correctament
 
 info.script.executat=L'script s'ha executat correctament
+info.script.massiu.executat=S&#39;ha programat l&#39;execució de l&#39;script a {0} expedient(s)
 info.variable.modificada=La variable s'ha modificat correctament
 info.expedient.aturat=L'expedient s'ha aturat correctament
 info.expedient.aturats=S'ha(n) aturat
+info.expedient.massiu.aturats=S&#39;ha programat l&#39;aturada de {0} expedient(s)
 info.expedient.repres=L'expedient s'ha représ correctament
 info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
 info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctament en els primers {0} expedients
+info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(s)
 
-info.expedient.iniciat=L'expedient s'ha iniciat correctament
+info.expedient.iniciat=L&#39;expedient s&#39;ha iniciat correctament: {0}
 
-info.tasca.reassignada=La tasca {0} s'ha reassignat correctament
+info.tasca.reassignada=La tasca s&#39;ha reassignat correctament
+info.tasca.alliberada=La tasca s&#39;ha retornat als seus responsables originals
 
 info.termini.iniciat=El termini s'ha iniciat correctament
 info.termini.aturat=El termini s'ha aturat correctament
@@ -380,7 +442,7 @@ info.termini.cancelat=El termini s'ha cancelat correctament
 info.termini.modificat=El termini s'ha modificat correctament
 
 info.tipus.exp.esborrat=El tipus d'expedient s'ha esborrat correctament
-info.defproc.marcat.inicial=La definició de procés '{0}' s'ha marcat com a inicial
+info.defproc.marcat.inicial=La definició de procés '{0}' s&#39;ha marcat com a inicial
 
 info.estat.creat=L'estat s'ha creat correctament
 info.estat.guardat=L'estat s'ha guardat correctament
@@ -508,6 +570,12 @@ comuns.son_oblig=són obligatoris
 comuns.tipus_exp=Tipus d'expedient
 comuns.tract_dona=Tractament dona
 comuns.tract_home=Tractament home
+comuns.massiu=Execucions massives
+comuns.tancar=Tancar
+comuns.progres=Progrés
+comuns.refrescar=Refrescar
+comuns.mes.dades=Més dades
+comuns.objectsPerPage=Resultats per pàgina
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
@@ -1144,6 +1212,9 @@ tasca.doc.guardar=Guardar
 tasca.doc.doc_marcats=Els documents marcats amb
 tasca.doc.generar.auto.confirm=El document generat s'adjuntarà automàticament a l'expedient. Voleu continuar?
 tasca.doc.zip=Descarregar documents comprimits en ZIP
+tasca.doc.adjunt.arxiu=Arxiu
+tasca.doc.adjunt.adjuntat.el=Adjuntat el
+tasca.doc.adjunt.data.document=Data del document
 
 tasca.form.confirmacio=Estau segur que voleu donar per bones les dades d'aquesta tasca?
 tasca.form.confirmacioValidacio=Estau segur que voleu donar per bones les dades d'aquesta tasca i finalitzar-la?
@@ -1171,6 +1242,9 @@ tasca.gllistat.baixa=Baixa
 tasca.gllistat.m_baixa=Molt baixa
 tasca.gllistat.data_limit=Data límit&nbsp;
 tasca.gllistat.agafar=Agafar
+tasca.gllistat.agafar.massiu=Agafar seleccionats
+tasca.gllistat.agafar.OK=S&#39;han agafat {0} tasques
+tasca.gllistat.agafar.KO=Error al agafar les tasques:
 
 tasca.info.confirmacio=Estau segur que voleu delegar aquesta tasca?
 tasca.info.info_tasca=Informació de la tasca
@@ -1208,6 +1282,7 @@ tasca.pllistat.m_baixa=Molt baixa
 tasca.pllistat.data_limit=Data límit&nbsp;
 tasca.pllistat.tasca_min=tasca
 tasca.pllistat.massiva=Tramitació massiva
+tasca.pllistat.alliberar=Alliberar
 
 tasca.massiva.tramitacio=Tramitació massiva de tasques
 tasca.massiva.tramitar=Tramitar
@@ -1234,6 +1309,7 @@ tasca.signa.signar=Signar
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
+tasca.signa.massiu.no_es_podran=No es poden signar documents massivament
 
 error.error=Error
 error.sa_produit=S'ha produït un error a l'aplicació
@@ -1259,3 +1335,7 @@ js.helforms.carreg_dades=Carregant dades...
 js.helforms.carregant=Carregant...
 js.helforms.selec_valor=Seleccioni un valor
 js.helforms.confirmacio=L'execució d'aquesta acció provocarà que es guardin automaticament les dades de la tasca. Voleu continuar?
+
+filtre.expressio.usuari=Usuari
+filtre.expressio.grup=Area
+filtre.expressio.expressio=Expressió
