--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -152,6 +152,7 @@ error.reprendre.expedient=No s'ha pogut reprendre l'expedient
 error.expedient.no.aturat=Aquest expedient no està aturat
 error.especificar.versio.proces=No s'ha especificat cap versió de procés
 error.canviar.versio.proces=No s'ha pogut canviar la versió de procés
+error.executar.reassignacio=No s'ha pogut realitzar la reassignació
 
 error.exist.exp.mateix.numero=Ja existeix un expedient amb el mateix número, torni a iniciar l'expedient
 error.iniciar.expedient=S'ha produït un error iniciant l'expedient
@@ -286,3 +287,5 @@ error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
 
 error.reindexar.expedient=Error al reindexar expedient
+
+error.no.massiu=Error al programar les accions massives
