MID: 531 MSG: Error en el càlcul del número d'expedient, per anualitat, si no hi ha cap expedient en l'any indicat. --> Generar seqüències anuals.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@868 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -289,3 +289,7 @@ error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap documen
 error.reindexar.expedient=Error al reindexar expedient
 
 error.no.massiu=Error al programar les accions massives
+error.seq.any=El contingut daquesta taula té camp buits o amb format incorrecte
+error.expedientTipus.any.repetit=Hi ha anys repetits a les seqüències actuals
+error.expedientTipus.any.format.any=Hi ha anys amb format incorrecte a les seqüències actuals
+error.expedientTipus.any.format.sequencia=Hi ha seqüències amb format incorrecte a les seqüències actuals
