--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -236,6 +236,9 @@ expedient.tipus.form.seq_actual=Seqüència actual
 expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
 expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
 expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedient
+expedient.tipus.form.any=Any
+expedient.tipus.form.sequencia=Seqüència
+expedient.tipus.form.seq_actuals=Seqüències actuals
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
@@ -273,6 +276,15 @@ expedient.massiva.tasca.reg.guardar=Guardar registre
 expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
 
 execucions.massives.no=No s''ha programat cap acció massiva
+execucions.mesura.temps.no=No s''han trobat mesures de temps
+expedient.mesura.temps=Mesures de temps
+
+temps.clau=Clau
+temps.darrera=Última
+temps.minima=Mínim
+temps.maxima=Màxim
+temps.numMesures=Execucions
+temps.mitja=Mitjana
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
