MID: 531 MSG: Error en el càlcul del número d'expedient, per anualitat, si no hi ha cap expedient en l'any indicat. --> Generar seqüències anuals.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@869 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -236,6 +236,9 @@ expedient.tipus.form.seq_actual=Seqüència actual
 expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
 expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
 expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedient
+expedient.tipus.form.any=Any
+expedient.tipus.form.sequencia=Seqüència
+expedient.tipus.form.seq_actuals=Seqüències actuals
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
