MID: 543 MSG: Al iniciar la aplicació, si hi ha timers actius que executen handlers, aqeusta dóna error
MID: 544
MSG: Generació d'informació estadística de costos i periodicitat d'accions

MID: 545
MSG: Al assignar una variable en una consulta per tipus ja existent es produeix un error


git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@892 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -228,7 +228,7 @@ error.ordre.consulta=No s'ha pogut modificar l'ordre
 error.personaService.noLogin=La persona #{0} no té el login activat
 error.personaService.noExisteix=La persona #{0} no existeix
 
-error.dissenyService.defprocDesplTipusExp=Aquesta definició de procés ja està desplegada a dins el tipus d'expedient "{0}"
+error.dissenyService.defprocDesplTipusExp=Aquesta definició de procés ja està desplegada a dins el tipus d''expedient "{0}"
 error.dissenyService.defprocDesplEntorn=Aquesta definició de procés ja està desplegada a dins l'entorn
 error.dissenyService.noConte=L'arxiu no conté cap definició de procés.
 error.dissenyService.noEntorn=No s'ha especificat cap entorn o la definició de procés no correspon amb l'entorn especificat
