--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -285,6 +285,7 @@ temps.minima=Mínim
 temps.maxima=Màxim
 temps.numMesures=Execucions
 temps.mitja=Mitjana
+temps.periode=Període
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
