MID: 547 MSG: Afegir estadístiques de temps a la generació de reports a les consultes per tipus
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@896 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -286,6 +286,16 @@ temps.maxima=Màxim
 temps.numMesures=Execucions
 temps.mitja=Mitjana
 temps.periode=Període
+temps.data=Data
+temps.duracio=Duració
+temps.exportar=Exportar
+temps.familia.domini=Dominis
+temps.familia.general=General
+temps.familia.massiva=Execucions massives
+temps.familia.massives_tasca=Tasques massives
+temps.familia.report=Informes
+temps.familia.timer=Timers
+temps.familia.tot=Tots
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
