MID: 555 MSG: Ampliar les estadístiques de temps a la tramitació de tasques i accions en expedients
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@911 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -296,6 +296,9 @@ temps.familia.massives_tasca=Tasques massives
 temps.familia.report=Informes
 temps.familia.timer=Timers
 temps.familia.tot=Tots
+temps.familia.tasques=Tasques
+temps.familia.consulta=Consulta
+temps.familia.expedient=Expedient
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
