MID: 554 MSG: Incluir estadísticas de Hibernate detallando las consultas realizadas a la base de datos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@913 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -296,6 +296,8 @@ temps.familia.massives_tasca=Tasques massives
 temps.familia.report=Informes
 temps.familia.timer=Timers
 temps.familia.tot=Tots
+temps.familia.sql_jbpm=Consultas Jbpm
+temps.familia.sql_helium=Consultas Helium
 temps.familia.tasques=Tasques
 temps.familia.consulta=Consulta
 temps.familia.expedient=Expedient
