MID: 557 MSG: Afegir estadístiques de temps a les funcions del Dao de jbpm
MID: 558
MSG: Reestructurar informació de estadística de temps	

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@915 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -293,3 +293,5 @@ error.seq.any=El contingut daquesta taula té camp buits o amb format incorrecte
 error.expedientTipus.any.repetit=Hi ha anys repetits a les seqüències actuals
 error.expedientTipus.any.format.any=Hi ha anys amb format incorrecte a les seqüències actuals
 error.expedientTipus.any.format.sequencia=Hi ha seqüències amb format incorrecte a les seqüències actuals
+
+error.usurol.buit=L'usuari/Rol no pot ser buit
