--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -276,7 +276,8 @@ expedient.massiva.tasca.reg.guardar=Guardar registre
 expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
 
 execucions.massives.no=No s''ha programat cap acció massiva
-execucions.mesura.temps.no=No s''han trobat mesures de temps
+execucions.mesura.temps.no=No s'han trobat mesures de temps
+execucions.mesura.temps.bbdd.no=No s'han trobat mesures de temps de consultes a BBDD amb un temps superior al 100ms
 expedient.mesura.temps=Mesures de temps
 
 temps.clau=Clau
@@ -301,6 +302,8 @@ temps.familia.sql_helium=Consultas Helium
 temps.familia.tasques=Tasques
 temps.familia.consulta=Consulta
 temps.familia.expedient=Expedient
+temps.familia.jbpmDao=jBPM Dao
+temps.familia.lucene=Lucene
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
