--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -286,7 +286,7 @@ temps.minima=Mínim
 temps.maxima=Màxim
 temps.numMesures=Execucions
 temps.mitja=Mitjana
-temps.periode=Període
+temps.periode=Freqüència
 temps.data=Data
 temps.duracio=Duració
 temps.exportar=Exportar
