MID: 559 MSG: Añadir un monitor de recursos sobre los hilos en ejecución, memoria disponible, tiempo de CPU, ...
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@919 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -279,6 +279,27 @@ execucions.massives.no=No s''ha programat cap acció massiva
 execucions.mesura.temps.no=No s'han trobat mesures de temps
 execucions.mesura.temps.bbdd.no=No s'han trobat mesures de temps de consultes a BBDD amb un temps superior al 100ms
 expedient.mesura.temps=Mesures de temps
+expedient.monitor=Monitor
+expedient.monitor.det=Monitor
+expedient.monitor.NEW=Nuevo
+expedient.monitor.RUNNABLE=En ejecuci&oacute;n
+expedient.monitor.BLOCKED=Bloqueado
+expedient.monitor.WAITING=Esperando
+expedient.monitor.TIMED_WAITING=Planificado
+expedient.monitor.TERMINATED=Terminado
+
+expedient.monitor.procesadores=Procesadores
+expedient.monitor.memoria_disponible=Memoria disponible
+expedient.monitor.memoria_maxima=Memoria m&aacute;xima.
+expedient.monitor.memoria_total=Total de memoria
+expedient.monitor.carga_cpu=Carga de CPU
+expedient.monitor.deadlocked=Deadlocked
+expedient.monitor.daemon_thread=Daemon thread
+expedient.monitor.hilo=Nombre
+expedient.monitor.cputime=Tiempo CPU
+expedient.monitor.estado=Estado
+expedient.monitor.espera=Espera
+expedient.monitor.blockedtime=T. bloqueo							
 
 temps.clau=Clau
 temps.darrera=Última
