MID: 561 MSG: Optimització: Executar indexació Lucene en segon pla MID: 559 MSG: Monitor de recursos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@921 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -300,7 +300,10 @@ expedient.monitor.cputime=Tiempo CPU
 expedient.monitor.estado=Estado
 expedient.monitor.espera=Espera
 expedient.monitor.blockedtime=T. bloqueo							
-
+expedient.monitor.os-name=Sistema operativo
+expedient.monitor.os-arch=Arquitectura
+expedient.monitor.os-version=Versi&oacute;n
+		
 temps.clau=Clau
 temps.darrera=Última
 temps.minima=Mínim
