MID: 0000528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@924 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -276,6 +276,58 @@ expedient.massiva.tasca.reg.guardar=Guardar registre
 expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
 
 execucions.massives.no=No s''ha programat cap acció massiva
+execucions.mesura.temps.no=No s'han trobat mesures de temps
+execucions.mesura.temps.bbdd.no=No s'han trobat mesures de temps de consultes a BBDD amb un temps superior al 100ms
+expedient.mesura.temps=Mesures de temps
+expedient.monitor=Monitor
+expedient.monitor.det=Monitor
+expedient.monitor.NEW=Nuevo
+expedient.monitor.RUNNABLE=En ejecuci&oacute;n
+expedient.monitor.BLOCKED=Bloqueado
+expedient.monitor.WAITING=Esperando
+expedient.monitor.TIMED_WAITING=Planificado
+expedient.monitor.TERMINATED=Terminado
+
+expedient.monitor.procesadores=Procesadores
+expedient.monitor.memoria_disponible=Memoria disponible
+expedient.monitor.memoria_maxima=Memoria m&aacute;xima.
+expedient.monitor.memoria_total=Total de memoria
+expedient.monitor.carga_cpu=Carga de CPU
+expedient.monitor.deadlocked=Deadlocked
+expedient.monitor.daemon_thread=Daemon thread
+expedient.monitor.hilo=Nombre
+expedient.monitor.cputime=Tiempo CPU
+expedient.monitor.estado=Estado
+expedient.monitor.espera=Espera
+expedient.monitor.blockedtime=T. bloqueo							
+expedient.monitor.os-name=Sistema operativo
+expedient.monitor.os-arch=Arquitectura
+expedient.monitor.os-version=Versi&oacute;n
+		
+temps.clau=Clau
+temps.darrera=Última
+temps.minima=Mínim
+temps.maxima=Màxim
+temps.numMesures=Execucions
+temps.mitja=Mitjana
+temps.periode=Freqüència
+temps.data=Data
+temps.duracio=Duració
+temps.exportar=Exportar
+temps.familia.domini=Dominis
+temps.familia.general=General
+temps.familia.massiva=Execucions massives
+temps.familia.massives_tasca=Tasques massives
+temps.familia.report=Informes
+temps.familia.timer=Timers
+temps.familia.tot=Tots
+temps.familia.sql_jbpm=Consultas Jbpm
+temps.familia.sql_helium=Consultas Helium
+temps.familia.tasques=Tasques
+temps.familia.consulta=Consulta
+temps.familia.expedient=Expedient
+temps.familia.jbpmDao=jBPM Dao
+temps.familia.lucene=Lucene
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
