--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -311,6 +311,7 @@ temps.maxima=Màxim
 temps.numMesures=Execucions
 temps.mitja=Mitjana
 temps.periode=Freqüència
+temps.pes=Pes total
 temps.data=Data
 temps.duracio=Duració
 temps.exportar=Exportar
