mid: 0000528 msg: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@937 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -101,6 +101,7 @@ expedient.termini.modificar=Modificar termini
 expedient.termini.modificar.tipus=Tipus de modificació
 expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
+expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per finalitzada?
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
 expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aquest document en aquest(s) expedient(s)?
