MID: 568 MSG: Millores a la consulta d'expedients: administrador poder consultar expedients anulats
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@950 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -37,6 +37,12 @@ expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
 expedient.consulta.massiva.seleccio.activar=Activar selecció
 expedient.consulta.massiva.seleccio.desactivar=Desactivar selecció
+expedient.consulta.anulats=Mostrar anul·lats
+expedient.consulta.anulats.actius=Actius
+expedient.consulta.anulats.anulats=Anul·lats
+expedient.consulta.anulats.tots=Actius i anul·lats
+expedient.consulta.anulats.mostrar=Mostrar expedients
+
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
 expedient.dada.variable=Variable
