MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@961 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -295,3 +295,14 @@ error.expedientTipus.any.format.any=Hi ha anys amb format incorrecte a les seqüè
 error.expedientTipus.any.format.sequencia=Hi ha seqüències amb format incorrecte a les seqüències actuals
 
 error.usurol.buit=L'usuari/Rol no pot ser buit
+
+# ##########
+# Datatables
+# ##########
+datatable.ajax.error=S'ha produït un error en la consulta per omplir la taula
+datatable.ajax.timeout=La consulta per omplir la taula ha estat molt de temps a contestar i s'ha cancel·lat
+peticio.ajax.error=S'ha produït un error en la consulta
+peticio.ajax.timeout=La consulta ha estat molt de temps a contestar i s'ha cancel·lat
+# ##########
+# /Datatables
+# ##########
